# crewai_company_picker

./: .gitignore  README.md  pyproject.toml
src/company_picker/: crew.py  main.py
src/company_picker/tools/: push_tool.py
