[project]
name = "company_picker"
version = "0.1.0"
description = "company_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
company_picker = "company_picker.main:run"
run_crew = "company_picker.main:run"
train = "company_picker.main:train"
replay = "company_picker.main:replay"
test = "company_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
